--- a/src/style.css
+++ b/src/style.css
@@ -7,11 +7,11 @@ html {
 
   --image-gradient: linear-gradient(
     to bottom left,
-    rgba(17, 16, 16, 0.678),
-    rgba(12, 10, 22, 0.863)
+    rgba(17, 16, 16, 0.278),
+    rgba(12, 10, 22, 0.463)
   );
 
-  --imp-text-color: #c770f0;
+  --imp-text-color: #2E9CCA;
 }
 
 .purple {
@@ -53,18 +53,18 @@ html {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #2d1950;
+  background: #25274D;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(178, 121, 216, 0.959);
+  background: rgba(46, 156, 202, 0.959);
   border-radius: 12px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(222, 130, 235, 0.911);
+  background: rgba(46, 156, 202, 0.911);
   border-radius: 12px;
 }
 
@@ -94,7 +94,7 @@ html {
 
 .navbar-toggler span {
   display: block !important;
-  background-color: #be50f4 !important;
+  background-color: #2E9CCA !important;
   height: 4px !important;
   width: 27px !important;
   margin-top: 5px !important;
@@ -152,8 +152,8 @@ html {
 }
 
 .logo {
-  height: 1.4em !important;
-  width: 2.5em !important;
+  height: 2.5em !important;
+  width: 6em !important;
 }
 
 .navbar-nav .nav-link {
@@ -191,7 +191,7 @@ html {
   height: 5px;
   width: 0;
   border-radius: 16px;
-  background: #c95bf5;
+  background: #2E9CCA;
   bottom: 1px;
   left: 0;
   z-index: -1;
@@ -254,7 +254,8 @@ html {
 .home-section {
   position: relative;
   z-index: -1;
-  background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
+  background-image: var(--image-gradient), url(./Assets/home-bg.jpg) ;
+  background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
   padding-bottom: 30px !important;
@@ -278,17 +279,17 @@ html {
 }
 
 .main-name {
-  color: #cd5ff8;
+  color: #2E9CCA;
 }
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
-  color: #be6adf !important;
+  color: #2E9CCA !important;
   font-weight: 600 !important;
 }
 .Typewriter__cursor {
   font-size: 2.4em !important;
-  color: #b562d6 !important;
+  color: #2E9CCA !important;
 }
 
 @media (max-width: 767px) {
@@ -368,7 +369,7 @@ html {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: #68187a;
+  background: #29648A;
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
@@ -376,13 +377,13 @@ html {
 
 .home-social-icons:hover::before {
   transform: scale(1.1);
-  box-shadow: 0 0 15px #801f95;
+  box-shadow: 0 0 15px #29648A;
 }
 
 .home-social-icons:hover {
-  color: #87209e;
-  box-shadow: 0 0 5px #87209e;
-  text-shadow: 0 0 2px #87209e;
+  color: #29648A;
+  box-shadow: 0 0 5px #29648A;
+  text-shadow: 0 0 2px #29648A;
 }
 
 .social-icons {
@@ -392,7 +393,7 @@ html {
 }
 
 .icon-colour {
-  color: #700c86 !important;
+  color: #29648A !important;
 }
 
 /* --------- */
@@ -435,7 +436,7 @@ html {
 }
 
 .blockquote-footer {
-  color: #a588c0 !important;
+  color: #AAABB9 !important;
 }
 /* --------- */
 /* Projects */
@@ -456,7 +457,7 @@ html {
 }
 
 .project-card-view {
-  box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
+  box-shadow: 0 4px 5px 3px rgba(46, 156, 202, 0.459) !important;
   color: white !important;
   background-color: transparent !important;
   opacity: 0.9 !important;
@@ -466,7 +467,7 @@ html {
 .project-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
-  box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
+  box-shadow: 0 4px 4px 5px rgba(46, 156, 202, 0.561) !important;
 }
 
 .blog-card {
@@ -479,7 +480,7 @@ html {
 
 .blog-card-view {
   background-color: transparent !important;
-  box-shadow: 0 3px 3px 2px rgba(145, 77, 161, 0.459) !important;
+  box-shadow: 0 3px 3px 2px rgba(46, 156, 202, 0.459) !important;
   color: white !important;
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
@@ -497,7 +498,7 @@ html {
 .blog-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
-  box-shadow: 0 3px 3px 5px rgba(155, 88, 173, 0.65) !important;
+  box-shadow: 0 3px 3px 5px rgba(46, 156, 202, 0.65) !important;
 }
 
 .card-img-top {
@@ -514,14 +515,14 @@ html {
 
 .btn-primary {
   color: #fff !important;
-  background-color: #623686 !important;
-  border-color: #623686 !important;
+  background-color: #2E9CC0 !important;
+  border-color: #2E9CC0 !important;
 }
 
 .btn-primary:hover {
   color: #fff !important;
-  background-color: #6d20c5d7 !important;
-  border-color: #6d20c5d7 !important;
+  background-color: #29648A !important;
+  border-color: #29648A !important;
 }
 .btn:focus {
   outline: none !important;
@@ -551,7 +552,7 @@ html {
   margin: 15px !important;
   padding: 10px !important;
   opacity: 0.93 !important;
-  border: 1.7px solid rgba(200, 137, 230, 0.637) !important;
+  border: 1.7px solid rgba(46, 156, 202, 0.637) !important;
   vertical-align: middle !important;
   text-align: center !important;
   border-radius: 5px !important;
@@ -570,7 +571,7 @@ html {
 .tech-icons:hover {
   transform: scale(1.05) !important;
   overflow: hidden !important;
-  border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
+  border: 2.2px solid rgba(46, 156, 202, 0.883) !important;
 }
 .tech-icon-images {
   padding: 20px !important;
@@ -641,7 +642,7 @@ html {
 .resume .resume-item {
   padding: 0 0 10px 25px;
   margin-top: -2px;
-  border-left: 2px solid #8a49a8;
+  border-left: 2px solid #29648A;
   position: relative;
 }
 
@@ -678,7 +679,7 @@ html {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #8a49a8;
+  border: 2px solid #2E9CCB;
 }
 
 .like-item {
@@ -688,8 +689,8 @@ html {
 }
 
 .like-btn {
-  background-color: #934cce5e !important;
-  border-color: #934cce5e !important;
+  background-color: #29648A !important;
+  border-color: #29648A !important;
   padding: 0.25rem 0.98rem !important;
   border-radius: 5px !important;
   line-height: 1.4 !important;
@@ -698,8 +699,8 @@ html {
 
 .like-btn:hover {
   transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
+  background-color: #AAABB8 !important;
+  border-color: #AAABB8 !important;
 }
 
 .animate-like {
@@ -723,7 +724,7 @@ html {
 
 .fork-btn-inner {
   line-height: 1.4em !important;
-  background-color: #934cce5e !important;
+  background-color: #29648A !important;
   padding: 0.25rem 1.1rem !important;
   vertical-align: middle !important;
   text-align: center !important;
@@ -731,8 +732,8 @@ html {
 
 .fork-btn-inner:hover {
   transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
+  background-color: #AAABB8 !important;
+  border-color: #AAABB8 !important;
 }
 .fork-btn-inner::after {
   display: none !important;
